Fixed footer items not centered

--- a/css/test.css
+++ b/css/test.css
@@ -119,6 +119,8 @@ footer {
 footer > div.center {
 	display: flex;
 	flex-direction: row;
+	justify-content: center;
+    margin: 0 auto;
 }
 
 footer a {
